<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="681dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728">

        <EditText
            android:id="@+id/EdittextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correo" />

        <EditText
            android:id="@+id/EditTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/EditTextContraseñaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/VolverPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarUsuario"
            android:text="@string/aceptar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>