<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:layout_weight="50" />

    <EditText
        android:id="@+id/editTextTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_weight="9"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"


        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_weight="9"

        android:hint="@string/password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"

        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"
        />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/ingresar"
        android:layout_weight="10"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_style"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="20"
        android:gravity="center|top"
        >

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewRecordarPasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obtener_contraseña"
        android:gravity="center"
        />

</LinearLayout>