<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/com_facebook_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:windowSoftInputMode="adjustPan">

            <TextView
                android:id="@+id/nombreApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="178dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="26sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="97dp"
            android:layout_height="93dp"
            android:layout_marginStart="157dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="157dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="352dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="260dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:windowSoftInputMode="adjustPan">

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:layout_marginStart="90dp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/nombreView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="260dp"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:windowSoftInputMode="adjustPan">

                <TextView
                    android:id="@+id/apellidos"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos"
                    android:layout_marginStart="90dp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/apellidosView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="260dp"
                android:layout_marginTop="115dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:windowSoftInputMode="adjustPan">

                <TextView
                    android:id="@+id/correo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/correov"
                    android:layout_marginStart="90dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/correoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textSize="16sp"
                    android:text="@string/Correo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="260dp"
                android:layout_marginTop="140dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:windowSoftInputMode="adjustPan">

                <TextView
                    android:id="@+id/edad"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/edad"
                    android:layout_marginStart="90dp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edadView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="349dp"
                android:layout_height="260dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="190dp"
                android:windowSoftInputMode="adjustPan">

                <Button
                    android:id="@+id/actualizar"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/actualizar"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCerrarSesion"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="@string/CerrarSesion"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>